[package]
name = "stt-painting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-openai = "0.12.1"
clap = { version = "4.3.16", features = ["derive"] }
cpal = "0.15.2"
hound = "3.5.0"
libsamplerate = "0.1.0"
samplerate = "0.2.4"
tokio = {version = "1.29.1", features = ["rt-multi-thread", "macros"] }
whisper-rs = "0.8.0"
